# grobid_teixml_to_markdown

./: LICENSE  README.md  pyproject.toml  tei_to_markdown.py
example_data/grobid_teixml/: 10.1002%2Fadfm.201606325.tei.xml  10.5751%2Fes-14351-280319.tei.xml
example_data/md/: 10.1002%2Fadfm.201606325.md  10.1016%2Fj.rser.2008.09.017.md  10.1111%2Fcsp2.319.md  10.5751%2Fes-14351-280319.md  10.7717%2Fpeerj.5504.md
example_data/teixml/: 10.1016%2Fj.rser.2008.09.017.tei.xml  10.1111%2Fcsp2.319.tei.xml  10.7717%2Fpeerj.5504.tei.xml
