[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grobid-teixml-to-markdown"
version = "0.1.0"
description = "Convert GROBID-generated TEI XML files to Markdown format"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Tannon Kew", email = "tannon.kew@uzh.ch"}
]
keywords = ["grobid", "tei", "xml", "markdown", "academic", "papers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: XML",
]

dependencies = [
    "lxml",
    "tqdm",
]

[project.scripts]
tei-to-markdown = "tei_to_markdown:main"

[project.urls]
Repository = "https://github.com/tannonk/grobid-teixml-to-markdown"
